Particle Instance doesn't preserve edge data #54341

Closed
opened 2018-03-16 21:11:11 +01:00 by Serge Lyatin · 11 comments

System Information
Win10 64bit

Blender Version
Broken: 2.79a

Short description of error
Plane with smooth Subsurf is corrected with creases to keep angles sharp. If Subsurf is placed after Instancer, then creases won't work. Bevel weight and sharp edges also don't work.

Exact steps for others to reproduce the error
Crease.blend

**System Information** Win10 64bit **Blender Version** Broken: 2.79a **Short description of error** Plane with smooth Subsurf is corrected with creases to keep angles sharp. If Subsurf is placed after Instancer, then creases won't work. Bevel weight and sharp edges also don't work. **Exact steps for others to reproduce the error** [Crease.blend](https://archive.blender.org/developer/F2446677/Crease.blend)
Author

Added subscriber: @SergeL

Added subscriber: @SergeL

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Philipp Oeser self-assigned this 2018-04-20 13:04:46 +02:00
Member

This is a limitation to the current Particle Instance modifier (not a bug though).

It doesnt handle calculating/copying edges/edgedata itself, but instead uses the more generic CDDM_calc_edges here (which has no clue of the original meshes edgedata)

It could be done though [modifiers like e.g. Array can handle this nicely], think this is a nice TODO, will put on my desk and have a look later.
Unless @Sergey thinks this is a waste of time and will be part of rewrite/overhaul anyways?

This is a limitation to the current Particle Instance modifier (not a bug though). It doesnt handle calculating/copying edges/edgedata itself, but instead uses the more generic `CDDM_calc_edges` [here ](https://developer.blender.org/diffusion/B/browse/master/source/blender/modifiers/intern/MOD_particleinstance.c;ac8f6413ccce2efe08f6a9a1a3de3c05c8d0d1d4$522) (which has no clue of the original meshes edgedata) It could be done though [modifiers like e.g. `Array` can handle this nicely], think this is a nice TODO, will put on my desk and have a look later. Unless @Sergey thinks this is a waste of time and will be part of rewrite/overhaul anyways?

@lichtwerk, this is something what we should support indeed. Mind looking into this? Shouldn't be hard to add support :)

@lichtwerk, this is something what we should support indeed. Mind looking into this? Shouldn't be hard to add support :)
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Member

@Sergey: got it working, will post patch tomorrow (just saying, so @dr.sybren is not porting this modifier over in 2.8 before we merge?)

@Sergey: got it working, will post patch tomorrow (just saying, so @dr.sybren is not porting this modifier over in 2.8 before we merge?)

I'll leave porting the Particle Instance modifier to @lichtwerk then ;-)

Maybe poke me at #54737 once it's either ported or fixed up enough for me to port?

I'll leave porting the Particle Instance modifier to @lichtwerk then ;-) Maybe poke me at #54737 once it's either ported or fixed up enough for me to port?
Member

possible fix: D3199

possible fix: [D3199](https://archive.blender.org/developer/D3199)

This issue was referenced by 288d7794d4

This issue was referenced by 288d7794d4c6836e1322d5ed943c4fbd4b0b0e54
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54341
No description provided.