Fix T54341: Particle Instance Modifier doesn't preserve edge data